Calculator height fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
     <div class="calc-screen hd-thm-1">
-      <input type="number" placeholder="0">
+      <input id="calc-screen" type="number" placeholder="0">
     </div>
 
     <div class="keys k-thm-1">
